# openapi.yml
@@ -893,11 +893,12 @@ components:
         - For `grant_type` = `code`, `email` and `code` are required.
         - For `grant_type` = `refresh_token`, `refresh_token` is required.
         - For `grant_type` = `google_token`, `google_token` is required.
+        - For `grant_type` = `apple_token`, `apple_token` is required.
       properties:
         grant_type:
           type: string
           description: Grant type to use.
-          enum: [code, refresh_token, google_token]
+          enum: [code, refresh_token, google_token, apple_token]
         email:
           type: string
           format: email
@@ -911,6 +912,9 @@ components:
         google_token:
           type: string
           description: Reserved for future Google auth integration.
+        apple_token:
+          type: string
+          description: Reserved for future Apple auth integration.
       required:
         - grant_type
 
